dfir_rs/tests/compile-fail/surface_anti_join_badtypes.stderr
error[E0277]: the trait bound `&str: Borrow<{integer}>` is not satisfied
 --> tests/compile-fail/surface_anti_join_badtypes.rs:5:13
  |
5 |         j = anti_join() -> for_each(std::mem::drop);
  |             ^^^^^^^^^^^ the trait `Borrow<{integer}>` is not implemented for `&str`
  |
help: the trait `Borrow<str>` is implemented for `std::string::String`
 --> $RUST/alloc/src/str.rs
  |
  | impl Borrow<str> for String {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `HashSet::<T, S, A>::contains`
 --> $RUST/std/src/collections/hash/set.rs
  |
  |     pub fn contains<Q: ?Sized>(&self, value: &Q) -> bool
  |            -------- required by a bound in this associated function
  |     where
  |         T: Borrow<Q>,
  |            ^^^^^^^^^ required by this bound in `HashSet::<T, S, A>::contains`
